# api/openapi/order.yml
@@ -8,22 +8,24 @@ servers:
     variables:
       hostname:
         default: 127.0.0.1
+
 paths:
-  /customer/{customerID}/orders/{orderID}:
+  /customer/{customer_id}/orders/{order_id}:
     get:
       description: "get order"
       parameters:
         - in: path
-          name: customerID
+          name: customer_id
           schema:
             type: string
           required: true
 
         - in: path
-          name: orderID
+          name: order_id
           schema:
             type: string
           required: true
+
       responses:
         '200':
           description: todo
@@ -31,6 +33,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Order'
+
         default:
           description: todo
           content:
@@ -38,12 +41,12 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /customer/{customerID}/orders:
+  /customer/{customer_id}/orders:
     post:
       description: "create order"
       parameters:
         - in: path
-          name: customerID
+          name: customer_id
           schema:
             type: string
           required: true
@@ -54,6 +57,7 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/CreateOrderRequest'
+
       responses:
         '200':
           description: todo
@@ -61,6 +65,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Order'
+
         default:
           description: todo
           content:
@@ -74,14 +79,14 @@ components:
       type: object
       required:
         - id
-        - customerID
+        - customer_id
         - status
         - items
-        - paymentLink
+        - payment_link
       properties:
         id:
           type: string
-        customerID:
+        customer_id:
           type: string
         status:
           type: string
@@ -89,7 +94,7 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Item'
-        paymentLink:
+        payment_link:
           type: string
 
     Item:
@@ -98,7 +103,7 @@ components:
         - id
         - name
         - quantity
-        - priceID
+        - price_id
       properties:
         id:
           type: string
@@ -107,7 +112,7 @@ components:
         quantity:
           type: integer
           format: int32
-        priceID:
+        price_id:
           type: string
 
     Error:
@@ -119,10 +124,10 @@ components:
     CreateOrderRequest:
       type: object
       required:
-        - customerID
+        - customer_id
         - items
       properties:
-        customerID:
+        customer_id:
           type: string
         items:
           type: array
@@ -140,3 +145,4 @@ components:
         quantity:
           type: integer
           format: int32
+          minimum: 1
